--- a/Transend/AndroidManifest.xml
+++ b/Transend/AndroidManifest.xml
@@ -4,12 +4,16 @@
       android:versionCode="1"
       android:versionName="1.0">
     <application android:label="@string/app_name" android:icon="@drawable/icon">
-        <activity android:name="MapActivity"
+        <uses-library android:name="com.google.android.maps" />
+        <uses-sdk android:minSdkVersion="8"/>
+        <uses-permission android:name="android.permission.INTERNET" />
+        <activity android:name=".MyMapActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".TransendService"/>
     </application>
 </manifest> 
