--- a/Transend/AndroidManifest.xml
+++ b/Transend/AndroidManifest.xml
@@ -3,17 +3,54 @@
       package="com.Transend"
       android:versionCode="1"
       android:versionName="1.0">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <uses-library android:name="com.google.android.maps" />
         <uses-sdk android:minSdkVersion="8"/>
-        <uses-permission android:name="android.permission.INTERNET" />
-        <activity android:name=".MyMapActivity"
+        <activity android:name=".RiderMapActivity"
                   android:label="@string/app_name">
             <intent-filter>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".DriverMapActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".StartActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SYNC"/>
+                <action android:name="android.intent.action.get_Content"/>
+                <category android:name="android.intent.category.DEFAULT"/>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".HelpActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SYNC"/>
+                <action android:name="android.intent.action.get_Content"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".AboutActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SYNC"/>
+                <action android:name="android.intent.action.get_Content"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+
+
+
+
         <service android:name=".TransendService"/>
     </application>
+
 </manifest> 
