--- a/Transend/AndroidManifest.xml
+++ b/Transend/AndroidManifest.xml
@@ -5,16 +5,39 @@
       android:versionName="1.0">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-feature android:name="android.hardware.location"
+                  android:required="true"/>
+    <uses-feature android:name="android.hardware.location.gps"/>
+    <uses-feature android:name="android.hardware.location.network"/>
+    <uses-feature android:name="android.hardware.wifi"
+            android:required="true"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/icon">
         <uses-library android:name="com.google.android.maps" />
         <uses-sdk android:minSdkVersion="8"/>
-        <activity android:name=".RiderMapActivity"
+        <activity android:name=".LoginActivity"
                   android:label="@string/app_name">
             <intent-filter>
             </intent-filter>
         </activity>
 
         <activity android:name=".DriverMapActivity"
+                  android:label="@string/app_name">
+            <intent-filter>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".RiderMapActivity"
+                  android:label="@string/app_name">
+            <uses-library android:name="com.google.android.maps" />
+            <intent-filter>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".LoginActivity"
                   android:label="@string/app_name">
             <intent-filter>
             </intent-filter>
@@ -46,9 +69,27 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".DriverProfileActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SYNC"/>
+                <action android:name="android.intent.action.get_Content"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
 
+         <activity android:name=".RateCalculatorActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SYNC"/>
+                <action android:name="android.intent.action.get_Content"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
 
-
+         <activity android:name=".BookDriverActivity">
+            <intent-filter>
+            </intent-filter>
+        </activity>
+        <service android:name=".GPSService"/>
 
         <service android:name=".TransendService"/>
     </application>
